--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <script src="https://cdn.amcharts.com/lib/4/geodata/worldLow.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/geodata/usaLow.js"></script>
 <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+<p>before</p>
 <div id="chartdiv"></div>
+<p>after</p>
 
 <style>
 body {
